--- a/sample_config.env
+++ b/sample_config.env
@@ -3,17 +3,17 @@
 
 #________COMPULSORY____________
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "5024579133:AAFfeOBZRPTq5mwDKa_w-eGGCGDn5K-ip9A"
+APP_ID = 3147761
+API_HASH = "cdbe0b69c20c7e59ac4f49ace5c5386a"
+OWNER_ID = 1463799011
+AUTH_CHANNEL = "-1001597487206"
 
 #__________NOT COMPULSORY___________
 
 # For RCLONE ::
 # Name of the folder....not ID
-DESTINATION_FOLDER = "TorrentLeech-Gdrive"
+DESTINATION_FOLDER = "/usr/src/app/downloads"
 INDEX_LINK = ""
 
 # OTHERS ::
